Prevent component titles from pushing down buttons in component widget by adding max-width to the title overflow.

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -1200,6 +1200,12 @@ dl.activity-log dd {
     max-width: 100%;
 }
 
+.component-overflow {
+    word-wrap: break-word;
+    max-width: 90%;
+    display: inline-block;
+}
+
 /* Need to use this class with a fixed width */
 .overflow-block {
     display: block;
